adding new files

--- a/csit.html
+++ b/csit.html
@@ -159,11 +159,11 @@
             <div class="col-lg-3 shadow-lg  rounded mt-3">
                 <h4>Eight Semester</h4>
                 <ol>
-                    <li><a href="#">Parallel Computing</a></li>
+                    <li><a href="csit/8sem/pc/2074.html">Parallel Computing</a></li>
                     <li><a href="#">Internship</a></li>
-                    <li><a href="#">Advanced Database Design (Elective III)</a></li>
-                    <li><a href="#">Distributed Database Management System (Elective IV)</a></li>
-                    <li><a href="#">E-Business and E-Governance (Elective V)</a></li>
+                    <li><a href="csit/8sem/adbd/2074.html">Advanced Database Design (Elective III)</a></li>
+                    <li><a href="csit/8sem/ddbms/2074.html">Distributed Database Management System (Elective IV)</a></li>
+                    <li><a href="csit/8sem/ebeg/2074.html">E-Business and E-Governance (Elective V)</a></li>
                 </ol>
             </div>
         </div>
