--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
   <!-- Javascript custome -->
   <script>
-     function displayMessage() {
-        alert("Resources In WebSite Are Not Completed Yet, But We Are Adding Resources On Daily Basis. Thank You For Visiting Our Work.");
-     }
+    function displayMessage() {
+      alert("Resources In WebSite Are Not Completed Yet, But We Are Adding Resources On Daily Basis. Thank You For Visiting Our Work.");
+    }
     displayMessage(); 
   </script>
 
@@ -212,11 +212,11 @@
       <div class="col-lg-3 shadow-lg  rounded mt-3">
         <h4>Eight Semester</h4>
         <ol>
-          <li><a href="#">Parallel Computing</a></li>
+          <li><a href="csit/8sem/pc/2074.html">Parallel Computing</a></li>
           <li><a href="#">Internship</a></li>
-          <li><a href="#">Advanced Database Design (Elective III)</a></li>
-          <li><a href="#">Distributed Database Management System (Elective IV)</a></li>
-          <li><a href="#">E-Business and E-Governance (Elective V)</a></li>
+          <li><a href="csit/8sem/adbd/2074.html">Advanced Database Design (Elective III)</a></li>
+          <li><a href="csit/8sem/ddbms/2074.html">Distributed Database Management System (Elective IV)</a></li>
+          <li><a href="csit/8sem/ebeg/2074.html">E-Business and E-Governance (Elective V)</a></li>
         </ol>
       </div>
     </div>
@@ -260,7 +260,8 @@
               data-bs-parent="#accordionFlushExample">
               <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
                 <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being
-                filled with some actual content.</div>
+                filled with some actual content.
+              </div>
             </div>
           </div>
           <div class="accordion-item">
@@ -275,7 +276,8 @@
               <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
                 <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
                 happening here in terms of content, but just filling up the space to make it look, at least at first
-                glance, a bit more representative of how this would look in a real-world application.</div>
+                glance, a bit more representative of how this would look in a real-world application.
+              </div>
             </div>
           </div>
         </div>
