making rounded the corner of the paper model

--- a/csit/7sem/adJava/2075.html
+++ b/csit/7sem/adJava/2075.html
@@ -70,9 +70,9 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-               
+
                     <a href="#"><button type="button" class="btn  paper-year-style ">2075</button></a>
-                   
+
                 </div>
             </div>
 
@@ -104,7 +104,8 @@
                         <li>What is Servlet? Discuss life cycle of servlet in detail.</li>
                         <li>Discuss the process of creating menu in java with example.</li>
                         <li>What are the features of swing? Differentiate between AWT and java Swing.</li>
-                        <li>What is JDBC? Explain various type of JDBC drivers, also explain major design constraints with JDBC.</li>
+                        <li>What is JDBC? Explain various type of JDBC drivers, also explain major design constraints
+                            with JDBC.</li>
                         <li>Write short notes on (any two)
                             <br>
                             a. CORBA <br>
@@ -117,7 +118,8 @@
                             <p class="text-center">Attempt any two questions. (very long questions) (2x16=32)</p>
                         </b>
                         <li>Define Layout manager. Explain any two layout manager with example. </li>
-                        <li>Design a GUI program to add two numbers. Use text field to input data and  create necessay button also. Display the sum when user click on button "result".</li>
+                        <li>Design a GUI program to add two numbers. Use text field to input data and create necessay
+                            button also. Display the sum when user click on button "result".</li>
                         <li>Develop an application to accept a String and perform following functions. <br>
                             a. Find length of the string. <br>
                             b. Find no of words in it determine whether the string is palindrome or not <br>
