changing the style

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
     <!-- Science and Technology Departments -->
     <div class="row justify-content-center" id="csit-sem-sub">
-      <div class="col-lg-3 shadow-lg  rounded mt-3">
+      <div class="col-lg-3 shadow-lg  rounded mt-3 zoominout">
         <h4>First Semester</h4>
         <ol>
           <li><a href="#">Compulsory English </a></li>
@@ -138,7 +138,7 @@
           <li><a href="#">Programming Fundamentals And C Programming</a></li>
         </ol>
       </div>
-      <div class="col-lg-3 shadow-lg  rounded mt-3">
+      <div class="col-lg-3 shadow-lg  rounded mt-3 zoominout">
         <h4>Second Semester</h4>
         <ol>
           <li><a href="#">Linear Algebra</a></li>
@@ -148,7 +148,7 @@
           <li><a href="csit/2sem/DSA/2072.html">Data Structure And Algorithms</a></li>
         </ol>
       </div>
-      <div class="col-lg-3 shadow-lg  rounded mt-3">
+      <div class="col-lg-3 shadow-lg  rounded mt-3  zoominout">
         <h4>Third Semester</h4>
         <ol>
           <li><a href="csit/3sem/coa/2078.html">Computer Architecture</a></li>
@@ -162,7 +162,7 @@
     </div>
 
     <div class="row justify-content-center" id="csit-sem-sub">
-      <div class="col-lg-3 shadow-lg  rounded mt-3">
+      <div class="col-lg-3 shadow-lg  rounded mt-3  zoominout">
         <h4>Fourth Semester</h4>
         <ol>
           <li><a href="csit/4sem/sad/2079.html">System Analysis and Design</a></li>
@@ -173,7 +173,7 @@
           <li><a href="csit/4sem/toc/2079.html">Theory Of Computation</a></li>
         </ol>
       </div>
-      <div class="col-lg-3 shadow-lg  rounded mt-3">
+      <div class="col-lg-3 shadow-lg  rounded mt-3 zoominout">
         <h4>Fifth Semester</h4>
         <ol>
           <li><a href="csit/5sem/cg/2079.html">Computer Graphics</a></li>
@@ -184,7 +184,7 @@
           <li><a href="csit/5sem/web/2079.html">Web Technology I</a></li>
         </ol>
       </div>
-      <div class="col-lg-3 shadow-lg  rounded mt-3">
+      <div class="col-lg-3 shadow-lg  rounded mt-3 zoominout">
         <h4>Sixth Semester</h4>
         <ol>
           <li><a href="csit/6sem/crypto/2079.html">Introduction to Cryptography</a></li>
@@ -198,7 +198,7 @@
     </div>
 
     <div class="row justify-content-center" id="csit-sem-sub">
-      <div class="col-lg-3 shadow-lg  rounded mt-3">
+      <div class="col-lg-3 shadow-lg  rounded mt-3 zoominout">
         <h4>Seventh Semester</h4>
         <ol>
           <li><a href="csit/7sem/ecom/2075.html">E-commerce</a></li>
@@ -209,7 +209,7 @@
           <li><a href="csit/7sem/dmw/2075.html">Data Mining and Warehousing (Elective II)</a></li>
         </ol>
       </div>
-      <div class="col-lg-3 shadow-lg  rounded mt-3">
+      <div class="col-lg-3 shadow-lg  rounded mt-3 zoominout">
         <h4>Eight Semester</h4>
         <ol>
           <li><a href="csit/8sem/pc/2074.html">Parallel Computing</a></li>
@@ -307,10 +307,10 @@
         <img src="images/indra.jpg" width="200px" alt="" class="img-fluid rounded">
         <h5>Indra Kumar Ayer</h5>
         <h6>FWU Bsc. CSIT 2076</h6>
-        <a href="#"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100088744694376"><i class="bi bi-facebook"></i></a>
         <a href="#"> <i class="bi bi-instagram"></i></i></a>
       </div>
-      <div class="col-md-3 text-center">
+      <!-- <div class="col-md-3 text-center">
         <img src="images/nishan.jpg" width="200px" alt="" class="img-fluid rounded">
         <h5>Nishan Singh</h5>
         <h6>FWU Bsc. CSIT 2076</h6>
@@ -330,9 +330,9 @@
         <h6>FWU Bsc. CSIT 2076</h6>
         <a href="#"><i class="bi bi-facebook"></i></a>
         <a href="#"> <i class="bi bi-instagram"></i></i></a>
-      </div>
+      </div> -->
       <div class="col-md-3 text-center">
-        <img src="images/gaurav.jpg" width="200px" alt="" class="img-fluid rounded">
+        <img src="images/gaurav.jpg" width="160px" alt="" class="img-fluid rounded">
         <h5>Gaurav Bhatt</h5>
         <h6>FIBSS SEE 2079</h6>
         <a href="#"><i class="bi bi-facebook"></i></a>
