changing the files

--- a/bba.html
+++ b/bba.html
@@ -74,7 +74,7 @@
 
         <!-- Science and Technology Departments -->
         <div class="row justify-content-center" id="csit-sem-sub">
-            <div class="col-lg-3 shadow mt-3">
+            <div class="col-lg-3 shadow mt-3 zoominout">
                 <h4>First Semester</h4>
                 <ol>
                     <li><a href="#">Microeconomics (MGT 311) </a></li>
@@ -84,7 +84,7 @@
                     <li><a href="#">Computer Applications in Management (MGT 314)</a></li>
                 </ol>
             </div>
-            <div class="col-lg-3 shadow mt-3">
+            <div class="col-lg-3 shadow mt-3 zoominout">
                 <h4>Second Semester</h4>
                 <ol>
                     <li><a href="#">English for Business Administration (MGT 322)</a></li>
@@ -94,7 +94,7 @@
                     <li><a href="#">Sociology (MGT 325)</a></li>
                 </ol>
             </div>
-            <div class="col-lg-3 shadow mt-3">
+            <div class="col-lg-3 shadow mt-3 zoominout">
                 <h4>Third Semester</h4>
                 <ol>
                     <li><a href="#">Business Law (MGT 332)</a></li>
@@ -107,7 +107,7 @@
         </div>
 
         <div class="row justify-content-center" id="csit-sem-sub">
-            <div class="col-lg-3 shadow mt-3">
+            <div class="col-lg-3 shadow mt-3 zoominout">
                 <h4>Fourth Semester</h4>
                 <ol>
                     <li><a href="#">Organizational Behaviour (MGT 346)</a></li>
@@ -117,7 +117,7 @@
                     <li><a href="#">Corporate Finance I (MGT 342)</a></li>
                 </ol>
             </div>
-            <div class="col-lg-3 shadow mt-3">
+            <div class="col-lg-3 shadow mt-3 zoominout">
                 <h4>Fifth Semester</h4>
                 <ol>
                     <li><a href="#">Business Research Methods (MGT 352)</a></li>
@@ -128,7 +128,7 @@
                     <li><a href="#">Strategic Management (MGT 356)</a></li>
                 </ol>
             </div>
-            <div class="col-lg-3 shadow mt-3">
+            <div class="col-lg-3 shadow mt-3 zoominout">
                 <h4>Sixth Semester</h4>
                 <ol>
                     <li><a href="#">Banking and Insurance (MGT 365)</a></li>
@@ -142,7 +142,7 @@
         </div>
 
         <div class="row justify-content-center" id="csit-sem-sub">
-            <div class="col-lg-3 shadow mt-3">
+            <div class="col-lg-3 shadow mt-3 zoominout">
                 <h4>Seventh Semester</h4>
                 <ol>
                     <li><a href="#">International Finance (MGT 372)</a></li>
@@ -152,7 +152,7 @@
                     <li><a href="#">Taxation in Nepal (MGT 371)</a></li>
                 </ol>
             </div>
-            <div class="col-lg-3 shadow mt-3">
+            <div class="col-lg-3 shadow mt-3 zoominout">
                 <h4>Eight Semester</h4>
                 <ol>
                     <li><a href="#">Advertising and Promotion Management (MGT 383)</a></li>
