adding the logos and changing the content of the footer

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- Navbar -->
   <nav class="navbar  navbar-expand-lg bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand text-white" href="#">FWUNOTES</a>
+      <a class="navbar-brand text-white" href="#"><img src="images/logo.png" width="70px" alt="" class="img-fluid rounded"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -356,10 +356,10 @@
 
     <div class="row justify-content-center" id="footer-section-2">
       <div class="col-md-3 mb-3">
-        <h4>COMPANY NAME</h4>
+        <h4>FWUNOTES</h4>
         <hr class="mb-4">
-        Here you can use rows and columns to organize your footer content.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+         Here we provide the old question paper of different faculties of Far Western University.
+         Along this we also provide the notes of different subject.
       </div>
       <div class="col-md-2 mb-3" id="footer-useful-link">
         <h4>USEFUL LINKS</h4>
