adding the files and chaging the style of the footer section

--- a/csit/6sem/crypto/2079.html
+++ b/csit/6sem/crypto/2079.html
@@ -70,10 +70,10 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-lg-8">
-                    <a href="#"><button type="button" class="btn ">2074</button></a>
+                    <a href="2074.htm"><button type="button" class="btn ">2074</button></a>
                     <a href="2075.html"><button type="button" class="btn ">2075</button></a>
                     <a href="2076.html"><button type="button" class="btn ">2076</button></a>
-                    <a href="2079.html"><button type="button" class="btn paper-year-style">2079</button></a>
+                    <a href="#"><button type="button" class="btn paper-year-style">2079</button></a>
                 </div>
             </div>
 
@@ -141,7 +141,7 @@
                     </ol>
                 </div>
             </div>
-            <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
+            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow" id="paper-fourth-sem">
                 <h4>Sixth Semester</h4>
                 <ol>
                     <li><a href="#">Introduction to Cryptography</a></li>
