--- a/bba.html
+++ b/bba.html
@@ -22,7 +22,7 @@
     <!-- Navbar -->
     <nav class="navbar   navbar-expand-lg bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="index.html">FWUNOTES</a>
+            <a class="navbar-brand text-white" href="index.html"><img src="images/logo.png" width="70px" alt="" class="img-fluid rounded"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
