adding files webII

--- a/csit/6sem/crypto/2074.htm
+++ b/csit/6sem/crypto/2074.htm
@@ -130,14 +130,14 @@
                     </ol>
                 </div>
             </div>
-            <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
+            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow" id="paper-fourth-sem">
                 <h4>Sixth Semester</h4>
                 <ol>
                     <li><a href="#">Introduction to Cryptography</a></li>
                     <li><a href="../java/2074.html">Java Progamming I</a></li>
                     <li><a href="../research/2074.html">Research Methodology for CS</a></li>
                     <li><a href="../se/2074.html">Software Engineering</a></li>
-                    <li><a href="">Web Tech II</a></li>
+                    <li><a href="../webII/2074.html">Web Tech II</a></li>
                     <li><a href="">Minor Project I</a></li>
                 </ol>
             </div>
@@ -169,10 +169,10 @@
             <div class="col-lg-2 mb-3" id="footer-useful-link">
                 <h4>USEFUL LINKS</h4>
                 <hr class="lg-4">
-                <a href="csit.html">CSIT</a> <br>
+                <a href="../../../csit.html">CSIT</a> <br>
                 <a href="#">General Bsc</a> <br>
                 <a href="#">Engineering</a> <br>
-                <a href="bba.html">BBA</a> <br>
+                <a href="../../../bba.html">BBA</a> <br>
                 <a href="#">BBS</a> <br>
             </div>
             <div class="col-lg-3 mb-3" id="footer-contact">
