--- a/csit/6sem/webII/2076.html
+++ b/csit/6sem/webII/2076.html
@@ -72,15 +72,14 @@
                 <div class="col-8">
                     <a href="2074.html"><button type="button" class="btn">2074</button></a>
                     <a href="2075.html"><button type="button" class="btn">2075</button></a>
-                    <a href="#"><button type="button" class="btn  paper-year-style">2076</button></a>
-                    <a href="2079.html"><button type="button" class="btn ">2079</button></a>
+                    <a href="#"><button type="button" class="btn paper-year-style">2076</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
                 <p>End-Term Examination-2076</p>
-                <p> Java programming (CSIT.322)</p>
+                <p> Web Techonology II (CSIT.325)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
@@ -100,55 +99,82 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>What are various advantages of using package in java? Write downs steps to create package
-                            with
-                            example.</li>
-                        <li>What are constructors? Write a java to define a class, describe its constructor, overload
-                            the
-                            constructors and instantiate its object.</li>
-                        <li>How class and objects are create in java? Explain features of java in brief.</li>
-                        <li>Differentiate between interface and abstract class. Explain interface with example.</li>
-                        <li>Write a CUI program to accept two numbers and save its sum in file "sum.dat".</li>
-                        <li>What is collection in java? Write a java program to illustrate use of link list class with
-                            example.</li>
-                        <li>Demonstrate the application of super and final keywords in java.</li>
-                        <li>Write short notes (any two) <br>
-                            i. Method overriding <br>
-                            ii. Appiet <br>
-                            iii. java virtual machine
+                        <li>Explain basic syntax and different output statements in PHP.</li>
+                        <li>Write short notes on Filter input, XSS, Escape output.</li>
+                        <li>What are different logical operators used in PHP, explain with examples.</li>
+                        <li>Explain session and cookie with example.</li>
+                        <li>Write a program in PHP to print table of 9 in the following pattern <br>
+                            9 x 1 = 9 <br>
+                            9 x 2 = 18
                         </li>
-
-
+                        <li>Write a program in PHP to print the name, temporary name, size and type of upload file.</li>
+                        <li>What are different types of arrays in PHP?</li>
+                        <li>Explain foreach loop in PHP with suitable example.</li>
 
                         <h5 class="text-center">Group C</h5>
                         <b>
                             <p class="text-center">Attempt any two questions. (2x16=32)</p>
                         </b>
-                        <li>Define inheritance. Explain types of inheritance in java. How we can implement multiple in
-                            heritance in java with example?</li>
-                        <li>Define exception. Differentiate between checked and unchecked exception in java write a
-                            program
-                            to implement the concept of exception Handling by creating user define exceptios.</li>
-                        <li>Define multithreading. List out its advantages. Explain the life cycle of Thread with state
-                            diagram and programming example.</li>
-
-
+                        <li>Explain class,objects and class method in PHP with explain and also explain inheritance in
+                            PHP.</li>
+                        <li>Explain different types of joins and write output of different join queries on the following
+                            two tables. <br>
+                            Books
+                            <table class="table table-bordered">
+                                <tr>
+                                    <td>Book_id</td>
+                                    <td>Book_name</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td> <td>HTML Basic</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td> <td>Learn CSS basics</td>
+                                </tr>
+                                <tr>
+                                    <td>3</td> <td>PHP Professional from novice to professional</td>
+                                </tr>
+                                <tr>
+                                    <td>4</td> <td>Everything you know about javascript is wrong.</td>
+                                </tr>
+                            </table>
+                            <br>
+                            Student
+                            <table class="table table-bordered">
+                                <tr>
+                                    <td>Studentid</td> <td>Student_name</td> <td>Book_id</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td> <td>Ram</td> <td>1</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td> <td>Shyam</td> <td>2</td>
+                                </tr>
+                                <tr>
+                                    <td>3</td> <td>Hari</td> <td> </td>
+                                </tr>
+                                <tr>
+                                    <td>4</td> <td>rishna</td> <td>4</td>
+                                </tr>
+                            </table>
+                            <li>Explain database connection process in PHP. Write program in PHP to login and logout, consider all required table, database names yourself.</li>
                     </ol>
                 </div>
             </div>
-            <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
+            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow" id="paper-fourth-sem">
                 <h4>Sixth Semester</h4>
                 <ol>
                     <li><a href="../crypto/2074.htm">Introduction to Cryptography</a></li>
-                    <li><a href="#">Java Progamming I</a></li>
+                    <li><a href="../java/2074.html">Java Progamming I</a></li>
                     <li><a href="../research/2074.html">Research Methodology for CS</a></li>
                     <li><a href="../se/2074.html">Software Engineering</a></li>
-                    <li><a href="../webII/2074.html" href="">Web Tech II</a></li>
+                    <li><a href="#" href="">Web Tech II</a></li>
                     <li><a href="#" href="">Minor Project I</a></li>
                 </ol>
             </div>
         </div>
     </div>
+
 
 
 
