--- a/csit/5sem/sam/2074.html
+++ b/csit/5sem/sam/2074.html
@@ -23,7 +23,8 @@
     <!-- Navbar -->
     <nav class="navbar  navbar-expand-lg bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="../../../index.html">FWUNOTES</a>
+            <a class="navbar-brand text-white" href="../../../index.html"><img src="../../../images/logo.png"
+                    width="70px" alt="" class="img-fluid rounded"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -70,27 +71,26 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="2073.html"><button type="button" class="btn">2073</button></a>
-                    <a href="#"><button type="button" class="btn  paper-year-style">2075</button></a>
+                    <a href="#"><button type="button" class="btn paper-year-style">2074</button></a>
+                    <a href="2075.html"><button type="button" class="btn">2075</button></a>
                     <a href="2076.html"><button type="button" class="btn">2076</button></a>
-                    <a href="2078.html"><button type="button" class="btn">2078</button></a>
                     <a href="2079.html"><button type="button" class="btn ">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2075</p>
-                <p>Graphics and Visula Computing(CSIT.315)</p>
+                <p>End-Term Examination-2074</p>
+                <p> System Simulation and Modeling (CSIT. 314)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
                         <b>Semester:</b> Fifth <br>
                     </div>
-                    <div class="col-md-3 text-end">
+                    <div class="col-md-3 text-start">
                         <b>Full Marks:</b> 80 <br>
-                        <b>Time:</b> 2.40hrs
+                        <b>Time:</b> 2hrs 40 minutes
                     </div>
                 </div>
                 <p><i>Candidates are required to give their answers in their own words as far as practicable.
@@ -101,83 +101,97 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>What are components of computer graphics and explain the term frame buffer and beam penetraton method.</li>
-                        <li>Explain OpenGL and OpenGL libraries used and explain error handling in OpenGL.</li>
-                        <li>Write short notes on Depth sorting Method, and ray casting method.</li>
-                        <li>Explain back free face detection method and A-buffer method.</li>
-                        <li>What is illumination, writer short notes on Constant Intensity Shading (Flat Shading) and interpolated shading?</li>
-                        <li>Explain DDA algorithm.</li>
-                        <li>Write a program in C to draw a line and explain the equation of line.</li>
-                        <li>Write in short the 2D translation and rotation with matrix equation.</li>
+                        <li>Define random number and pseudo number. Explain tthe rejection method for random number
+                            generation</li>
+                        <li>What is general purpose simulation system (GPSS)? Explain any 5 GPSS symbols with their
+                            meaning.</li>
+                        <li>Define system with characteristics? List out entities, attributes, activities and state for
+                            the traffic, bank, communication system.</li>
+                        <li>Explain the process of model validation through the iterative method of calibration.</li>
+                        <li>Define queuing system with examples. Explain characteristics of queuing system.</li>
+                        <li>What is simulation model? Explain physical mathematical model with examples.</li>
+                        <li>Write when simulation is appropriate tool and when not.</li>
+                        <li>Describe principles used in modeling.</li>
+
+
+
                         <h5 class="text-center">Group C</h5>
                         <b>
-                            <p class="text-center">Attempt any two questions. (long questions) (2x16=32)</p>
+                            <p class="text-center">Attempt any two questions. (Long questions) 2x16=32 </p>
                         </b>
-                        <li>Explain difference between Raster Scan, Random Scan(Vector Scan) and explain different applicatoin areas of computer graphics and explain mid point circle drawing algorithm in short.</li>
-                        <li>Explain visible surface detection method with different approaches used and write short notes on area sub-division method, depth buffer method and write a program in C to draw a circle with center at (200, 200).</li>
-                        <li>Explain different 2D geometric transformation with matrix equations. Find the transformation matrix that transforms the square ABCD whose center is at (2,2) is reduced to half of its size with center still remaining at (2,2), the coordinate of square are ABCD are A(0,0), B(0,4), C(4,4), and D(4,0).</li>
+                        <li>What is simulation study? Explain the various steps used in simulation study.</li>
+                        <li>Describe the properties of random numbers. Explain kolmogorov- simnov test. The sequence of
+                            numbers 0.54,0.73,0.98,0.11 and 0.68 has been generated. Use k-s &#x0251;=0.05 test to
+                            determine if the hypothesis that the numbers are uniformly distributed on the interval 0 to
+                            1 can be rejected.</li>
+                        <li>Write short note on following <br>
+                            a) Linear congruential method <br>
+                            b) Kendall <br>
+                            c) Static Model <br>
+                            d) Uniform distribution  <br>
+                        </li>
                     </ol>
                 </div>
             </div>
-            <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
+            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow" id="paper-fourth-sem">
                 <h4>Fifth Semester</h4>
                 <ol>
-                    <li><a href="#">Computer Graphics</a></li>
+                    <li><a href="../cg/2079.html">Computer Graphics</a></li>
                     <li><a href="../daa/2075.html">Data Analysis and Algorithms</a></li>
                     <li><a href="../cd/2079.html">Compiler Design</a></li>
-                    <li><a href="../sam/2079.html">Simulation and Modeling</a></li>
+                    <li><a href="#">Simulation and Modeling</a></li>
                     <li><a href="../ai/2079.html">Artificial Intelligence</a></li>
-                    <li><a href="../web/2079.html">Web Technology I</a></li>
+                    <li><a href="../web/2073.html">Web Technology I</a></li>
                 </ol>
             </div>
         </div>
     </div>
 
 
+    <!-- Footer Section -->
+    <div class="container-fluid">
+        <div class="row justify-content-center rounded" id="footer-section">
+            <div class="col-md-6 text-center">Get connected with us on social networks:</div>
+            <div class="col-md-5 text-center">
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""> <i class="bi bi-instagram"></i></i></a>
+                <a href=""><i class="bi bi-github"></i></i></a>
+                <a href=""> <i class="bi bi-twitter"></i></i></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a href=""> <i class="bi bi-instagram"></i></i></a>
+            </div>
+        </div>
 
-  <!-- Footer Section -->
-  <div class="container-fluid">
-    <div class="row justify-content-center rounded" id="footer-section">
-        <div class="col-md-6 text-center">Get connected with us on social networks:</div>
-        <div class="col-md-5 text-center">
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""> <i class="bi bi-instagram"></i></i></a>
-            <a href=""><i class="bi bi-github"></i></i></a>
-            <a href=""> <i class="bi bi-twitter"></i></i></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
-            <a href=""> <i class="bi bi-instagram"></i></i></a>
+        <div class="row justify-content-center" id="footer-section-2">
+            <div class="col-lg-3 mb-3">
+                <h4>FWUNOTES</h4>
+                <hr class="mb-4">
+                Here we provide the old question paper of different faculties of Far Western University.
+                Along this we also provide the notes of different subject.
+            </div>
+            <div class="col-lg-2 mb-3" id="footer-useful-link">
+                <h4>USEFUL LINKS</h4>
+                <hr class="lg-4">
+                <a href="../../../csit.html">CSIT</a> <br>
+                <a href="#">General Bsc</a> <br>
+                <a href="#">Engineering</a> <br>
+                <a href="../../../bba.html">BBA</a> <br>
+                <a href="#">BBS</a> <br>
+            </div>
+            <div class="col-lg-3 mb-3" id="footer-contact">
+                <h4>CONTACT</h4>
+                <hr class="mb-4">
+                <div><i class="bi bi-house-door p-2"></i>Mahendranagar, New Katan </div>
+                <div><i class="bi bi-envelope-at-fill p-2"></i>birendrabohara2074@gmail.com</div>
+                <div><i class="bi bi-telephone-forward p-2"></i>+9779867315959</div>
+            </div>
+        </div>
+
+        <div class="row text-center" id="footer-copyright-section">
+            <div class="col-12 text-white">© 2022 Copyright: fwunotes.xyz</div>
         </div>
     </div>
 
-    <div class="row justify-content-center" id="footer-section-2">
-        <div class="col-lg-3 mb-3">
-            <h4>FWUNOTES</h4>
-            <hr class="mb-4">
-            Here we provide the old question paper of different faculties of Far Western University.
-            Along this we also provide the notes of different subject.
-        </div>
-        <div class="col-lg-2 mb-3" id="footer-useful-link">
-            <h4>USEFUL LINKS</h4>
-            <hr class="lg-4">
-            <a href="csit.html">CSIT</a> <br>
-            <a href="#">General Bsc</a> <br>
-            <a href="#">Engineering</a> <br>
-            <a href="bba.html">BBA</a> <br>
-            <a href="#">BBS</a> <br>
-        </div>
-        <div class="col-lg-3 mb-3" id="footer-contact">
-            <h4>CONTACT</h4>
-            <hr class="mb-4">
-            <div><i class="bi bi-house-door p-2"></i>Mahendranagar, New Katan </div>
-            <div><i class="bi bi-envelope-at-fill p-2"></i>birendrabohara2074@gmail.com</div>
-            <div><i class="bi bi-telephone-forward p-2"></i>+9779867315959</div>
-        </div>
-    </div>
-
-    <div class="row text-center" id="footer-copyright-section">
-        <div class="col-12 text-white">© 2022 Copyright: fwunotes.xyz</div>
-    </div>
-</div>
     <!-- BootStrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
