--- a/csit/5sem/sam/2076.html
+++ b/csit/5sem/sam/2076.html
@@ -23,7 +23,8 @@
     <!-- Navbar -->
     <nav class="navbar  navbar-expand-lg bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="../../../index.html">FWUNOTES</a>
+            <a class="navbar-brand text-white" href="../../../index.html"><img src="../../../images/logo.png"
+                width="70px" alt="" class="img-fluid rounded"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -70,68 +71,71 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="2074.html"><button type="button" class="btn ">2074</button></a>
-                    <a href="#"><button type="button" class="btn  paper-year-style">2075</button></a>
+                    <a href="2074.html"><button type="button" class="btn">2074</button></a>
+                    <a href="2075.html"><button type="button" class="btn">2075</button></a>
+                    <a href="#"><button type="button" class="btn paper-year-style">2076</button></a>
+                    <a href="2079.html"><button type="button" class="btn ">2079</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2075</p>
-                <p>Database Administration (CSIT. 415.2)</p>
+                <p>End-Term Examination-2076</p>
+                <p> System Simulation And Modeling (CSIT.314)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> Seventh <br>
+                        <b>Semester:</b> Fifth <br>
                     </div>
-                    <div class="col-md-3 text-end">
+                    <div class="col-md-3 text-start">
                         <b>Full Marks:</b> 80 <br>
-                        <b>Time:</b> 2.40hrs
+                        <b>Time:</b> 2hrs 40 minutes
                     </div>
                 </div>
                 <p><i>Candidates are required to give their answers in their own words as far as practicable.
                         The figures in the margin indicate full marks.</i></p>
                 <h5>Group B</h5>
                 <b>
-                    <p>Attempt any six questions.(6x8=24)</p>
+                    <p>Attempt any six questions.(6x8=48)</p>
                 </b>
                 <div class="text-start">
-                    <ol>
-                        <LI>What are the consitutes of an oracle database? Explain each of them.</LI>
-                        <li>What do you mean by Automatic Storage Management (ASM)? Explain its benefits. </li>
-                        <li>Which architecture should Oracle Enterprise Manger use? Explain the function of each component of architecture.</li>
-                        <li>What is a User Account and also explain the System Predefined User Roles?</li>
-                        <li>Give the name of two methods for performing Oracle backup and recovery. Explain Recovery Manager (RMAN) method.</li>
-                        <li>What is Data Pump Import? Explain Data Pump import Modes.</li>
-                        <li>What would be the main responsibiliites of oracle DBA in organization?</li>
-                        <li>Explain some difference between Oracle DBA role and Oracle Developer role.</li>
-                        <li>Write Short notes on <br>
-                            a. PGA <br>
-                            b. Oracle Managed Files (OMF) <br>
-                        </li>
+                    <li>Define system, system environement and component of system with examples.</li>
+                    <li>Write advantages and disadvantages of simulation.</li>
+                    <li>Describe Queuing system. Explain call center problem.</li>
+                    <li>What factor should be considered to select simulation software? Describe any four GPSS building
+                        blocks with proper meaning.</li>
+                    <li>By defining random number with their property, explain inverse transform technique for uniform
+                        and triangular distributions.</li>
+                    <li>Define discrete event simulation. Describe time advance algorithm.</li>
+                    <li>Explain various characterisstics of queuing system.</li>
+                    <li>Use the multiplicative congruential method to generate a sequence of four three digit random
+                        number let X<sub>0</sub>=118, a=4 and m=1000.</li>
 
-                        <h5 class="text-center">Group C</h5>
-                        <b>
-                            <p class="text-center">Attempt any two questions. (very long questions) (2x16=32)</p>
-                        </b>
-                        <li>Explain in detail different types of Errors and Failures occures in oracle database Recovery.</li>
-                        <li>What is Oracle Database Memory Management? Describe three type of memory management scheme used in oracle database
-                            memory management?
-                        </li>
-                        <li>Explain Oracle Process Architecture with block diagram?</li>
+                   <h5 class="text-center">Group C</h5>
+                    <b>
+                        <p class="text-center">Attempt any two questions. (2x16=32)</p>
+                    </b>
+                    <li>What is pseudo random number? The sequence of numbers 0.54,0.73,0.97,0.10 and 0.67 has been
+                        generated. Use k-s test &#x0251;=0.5 to determine if the hypothesis that numbers are uniformly
+                        distributed on the interval [0,1] can be rejected.</li>
+                    <li>Explain various steps performed for simulation study with flow chart.</li>
+                    <li>Describe various application areas of simulation.</li>
+
+
+
                     </ol>
                 </div>
             </div>
-            <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
-                <h4>Seventh Semester</h4>
+            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow" id="paper-fourth-sem">
+                <h4>Fifth Semester</h4>
                 <ol>
-                    <li><a href="../ecom/2075.html">E-commerce</a></li>
-                    <li><a href="../adJava/2075.html">Advanced Java Programming</a></li>
-                    <li><a href="../ooad/2075.html">Object Oriented Analysis and Design</a></li>
-                    <li><a href="#">Minor Project II</a></li>
-                    <li><a href="#">Database Administration (Elective I)</a></li>
-                    <li><a href="../dmw/2075.html">Data Mining and Warehousing (Elective II)</a></li>
+                    <li><a href="../cg/2079.html">Computer Graphics</a></li>
+                    <li><a href="../daa/2075.html">Data Analysis and Algorithms</a></li>
+                    <li><a href="../cd/2079.html">Compiler Design</a></li>
+                    <li><a href="#">Simulation and Modeling</a></li>
+                    <li><a href="../ai/2079.html">Artificial Intelligence</a></li>
+                    <li><a href="../web/2073.html">Web Technology I</a></li>
                 </ol>
             </div>
         </div>
@@ -139,8 +143,9 @@
 
 
 
-  <!-- Footer Section -->
-  <div class="container-fluid">
+   
+   <!-- Footer Section -->
+   <div class="container-fluid">
     <div class="row justify-content-center rounded" id="footer-section">
         <div class="col-md-6 text-center">Get connected with us on social networks:</div>
         <div class="col-md-5 text-center">
@@ -163,10 +168,10 @@
         <div class="col-lg-2 mb-3" id="footer-useful-link">
             <h4>USEFUL LINKS</h4>
             <hr class="lg-4">
-            <a href="csit.html">CSIT</a> <br>
+            <a href="../../../csit.html">CSIT</a> <br>
             <a href="#">General Bsc</a> <br>
             <a href="#">Engineering</a> <br>
-            <a href="bba.html">BBA</a> <br>
+            <a href="../../../bba.html">BBA</a> <br>
             <a href="#">BBS</a> <br>
         </div>
         <div class="col-lg-3 mb-3" id="footer-contact">
@@ -182,6 +187,7 @@
         <div class="col-12 text-white">© 2022 Copyright: fwunotes.xyz</div>
     </div>
 </div>
+
     <!-- BootStrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
