--- a/csit/5sem/sam/2079.html
+++ b/csit/5sem/sam/2079.html
@@ -23,7 +23,8 @@
     <!-- Navbar -->
     <nav class="navbar  navbar-expand-lg bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="../../../index.html">FWUNOTES</a>
+            <a class="navbar-brand text-white" href="../../../index.html"><img src="../../../images/logo.png"
+                width="70px" alt="" class="img-fluid rounded"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -70,7 +71,10 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="#"><button type="button" class="btn  paper-year-style">2079</button></a>
+                    <a href="2074.html"><button type="button" class="btn">2074</button></a>
+                    <a href="2075.html"><button type="button" class="btn">2075</button></a>
+                    <a href="2076.html"><button type="button" class="btn">2076</button></a>
+                    <a href="#"><button type="button" class="btn paper-year-style">2079</button></a>
                 </div>
             </div>
 
@@ -138,7 +142,7 @@
                     </ol>
                 </div>
             </div>
-            <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
+            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow" id="paper-fourth-sem">
                 <h4>Fifth Semester</h4>
                 <ol>
                     <li><a href="../cg/2079.html">Computer Graphics</a></li>
@@ -154,10 +158,11 @@
 
 
 
-    <!-- Footer Section -->
+   <!-- Footer Section -->
+   <div class="container-fluid">
     <div class="row justify-content-center rounded" id="footer-section">
-        <div class="col-md-6 col-11 text-center">Get connected with us on social networks:</div>
-        <div class="col-md-5 col-11 text-center">
+        <div class="col-md-6 text-center">Get connected with us on social networks:</div>
+        <div class="col-md-5 text-center">
             <a href=""><i class="bi bi-facebook"></i></a>
             <a href=""> <i class="bi bi-instagram"></i></i></a>
             <a href=""><i class="bi bi-github"></i></i></a>
@@ -168,36 +173,34 @@
     </div>
 
     <div class="row justify-content-center" id="footer-section-2">
-        <div class="col-md-3 col-11 mb-3">
-            <h4>COMPANY NAME</h4>
+        <div class="col-lg-3 mb-3">
+            <h4>FWUNOTES</h4>
             <hr class="mb-4">
-            Here you can use rows and columns to organize your footer content.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Here we provide the old question paper of different faculties of Far Western University.
+            Along this we also provide the notes of different subject.
         </div>
-        <div class="col-md-2 col-11 mb-3" id="footer-useful-link">
+        <div class="col-lg-2 mb-3" id="footer-useful-link">
             <h4>USEFUL LINKS</h4>
-            <hr class="mb-4">
+            <hr class="lg-4">
             <a href="../../../csit.html">CSIT</a> <br>
-            <a href="">General Bsc</a> <br>
-            <a href="">Engineering</a> <br>
-            <a href="">BBA</a> <br>
-            <a href="">BBS</a> <br>
+            <a href="#">General Bsc</a> <br>
+            <a href="#">Engineering</a> <br>
+            <a href="../../../bba.html">BBA</a> <br>
+            <a href="#">BBS</a> <br>
         </div>
-        <div class="col-md-3 col-11 mb-3" id="footer-contact">
+        <div class="col-lg-3 mb-3" id="footer-contact">
             <h4>CONTACT</h4>
             <hr class="mb-4">
             <div><i class="bi bi-house-door p-2"></i>Mahendranagar, New Katan </div>
             <div><i class="bi bi-envelope-at-fill p-2"></i>birendrabohara2074@gmail.com</div>
-            <div><i class="bi bi-telephone-forward p-2"></i>+9979867315959</div>
+            <div><i class="bi bi-telephone-forward p-2"></i>+9779867315959</div>
         </div>
     </div>
 
     <div class="row text-center" id="footer-copyright-section">
-        <div class="col-12 col-11 text-white">© 2022 Copyright: fwunotes.xyz</div>
+        <div class="col-12 text-white">© 2022 Copyright: fwunotes.xyz</div>
     </div>
-
-    </div> <!--Ending of Container-fluid-->
-
+</div>
     <!-- BootStrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
