--- a/csit/6sem/research/2075.html
+++ b/csit/6sem/research/2075.html
@@ -105,9 +105,9 @@
                         <li>What is research design? Mention the characteristics of good research design?</li>
                         <li>Point out the advantages and disadvantages of laboratory experiment?</li>
                         <li>What is reliabilit? If the correlation coefficient of a test score is 0.80, obtain the
-                            reliability coefficient if i) the test is made just once (single test) ii) the test is
-                            double iii) the length of test is four times iv) the test is done five times v) the test is
-                            done seven times and vi) test increase nine times.</li>
+                            reliability coefficient if <br> i) the test is made just once (single test) <br> ii) the test is
+                            double <br> iii) the length of test is four times <br> iv) the test is done five times <br> v) the test is
+                            done seven times and <br> vi) test increase nine times.</li>
                         <li>What are differences between primary and secondary data?</li>
                         <li>The reliability coefficient of a test is found 0.75 with mean score as 65 and s.d. of 12 Mr.
                             sudama obtain a score 55 on the test. What is the true score? Also computer 95% confidence
@@ -137,7 +137,7 @@
                     <li><a href="../java/2074.html">Java Progamming I</a></li>
                     <li><a href="#">Research Methodology for CS</a></li>
                     <li><a href="../se/2074.html">Software Engineering</a></li>
-                    <li><a href="#" href="">Web Tech II</a></li>
+                    <li><a href="../webII/2074.html" href="">Web Tech II</a></li>
                     <li><a href="#" href="">Minor Project I</a></li>
                 </ol>
             </div>
@@ -145,11 +145,11 @@
     </div>
 
 
-
-    <!-- Footer Section -->
+<!-- Footer Section -->
+<div class="container-fluid">
     <div class="row justify-content-center rounded" id="footer-section">
-        <div class="col-md-6 col-11 text-center">Get connected with us on social networks:</div>
-        <div class="col-md-5 col-11 text-center">
+        <div class="col-md-6 text-center">Get connected with us on social networks:</div>
+        <div class="col-md-5 text-center">
             <a href=""><i class="bi bi-facebook"></i></a>
             <a href=""> <i class="bi bi-instagram"></i></i></a>
             <a href=""><i class="bi bi-github"></i></i></a>
@@ -160,35 +160,34 @@
     </div>
 
     <div class="row justify-content-center" id="footer-section-2">
-        <div class="col-md-3 col-11 mb-3">
-            <h4>COMPANY NAME</h4>
+        <div class="col-lg-3 mb-3">
+            <h4>FWUNOTES</h4>
             <hr class="mb-4">
-            Here you can use rows and columns to organize your footer content.
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Here we provide the old question paper of different faculties of Far Western University.
+            Along this we also provide the notes of different subject.
         </div>
-        <div class="col-md-2 col-11 mb-3" id="footer-useful-link">
+        <div class="col-lg-2 mb-3" id="footer-useful-link">
             <h4>USEFUL LINKS</h4>
-            <hr class="mb-4">
-            <a href="../../../csit.html">CSIT</a> <br>
-            <a href="">General Bsc</a> <br>
-            <a href="">Engineering</a> <br>
-            <a href="">BBA</a> <br>
-            <a href="">BBS</a> <br>
+            <hr class="lg-4">
+            <a href="csit.html">CSIT</a> <br>
+            <a href="#">General Bsc</a> <br>
+            <a href="#">Engineering</a> <br>
+            <a href="bba.html">BBA</a> <br>
+            <a href="#">BBS</a> <br>
         </div>
-        <div class="col-md-3 col-11 mb-3" id="footer-contact">
+        <div class="col-lg-3 mb-3" id="footer-contact">
             <h4>CONTACT</h4>
             <hr class="mb-4">
             <div><i class="bi bi-house-door p-2"></i>Mahendranagar, New Katan </div>
             <div><i class="bi bi-envelope-at-fill p-2"></i>birendrabohara2074@gmail.com</div>
-            <div><i class="bi bi-telephone-forward p-2"></i>+9979867315959</div>
+            <div><i class="bi bi-telephone-forward p-2"></i>+9779867315959</div>
         </div>
     </div>
 
     <div class="row text-center" id="footer-copyright-section">
-        <div class="col-12 col-11 text-white">© 2022 Copyright: fwunotes.xyz</div>
+        <div class="col-12 text-white">© 2022 Copyright: fwunotes.xyz</div>
     </div>
-
-    </div> <!--Ending of Container-fluid-->
+</div>
 
     <!-- BootStrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
