--- a/csit/6sem/webII/2074.html
+++ b/csit/6sem/webII/2074.html
@@ -70,68 +70,65 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="2074.html"><button type="button" class="btn ">2074</button></a>
-                    <a href="#"><button type="button" class="btn  paper-year-style">2075</button></a>
+                    <a href="#"><button type="button" class="btn paper-year-style">2074</button></a>
+                    <a href="2075.html"><button type="button" class="btn">2075</button></a>
+                    <a href="2076.html"><button type="button" class="btn">2076</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2075</p>
-                <p>Database Administration (CSIT. 415.2)</p>
+                <p>End-Term Examination-2074</p>
+                <p> Web Techonology II (CSIT.325)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
                         <b>Level:</b> Undergraduate <br>
-                        <b>Semester:</b> Seventh <br>
+                        <b>Semester:</b> sixth <br>
                     </div>
-                    <div class="col-md-3 text-end">
+                    <div class="col-md-3 text-start">
                         <b>Full Marks:</b> 80 <br>
-                        <b>Time:</b> 2.40hrs
+                        <b>Time:</b> 2hrs 40 minutes
                     </div>
                 </div>
                 <p><i>Candidates are required to give their answers in their own words as far as practicable.
                         The figures in the margin indicate full marks.</i></p>
                 <h5>Group B</h5>
                 <b>
-                    <p>Attempt any six questions.(6x8=24)</p>
+                    <p>Attempt any six questions.(6x8=48)</p>
                 </b>
                 <div class="text-start">
                     <ol>
-                        <LI>What are the consitutes of an oracle database? Explain each of them.</LI>
-                        <li>What do you mean by Automatic Storage Management (ASM)? Explain its benefits. </li>
-                        <li>Which architecture should Oracle Enterprise Manger use? Explain the function of each component of architecture.</li>
-                        <li>What is a User Account and also explain the System Predefined User Roles?</li>
-                        <li>Give the name of two methods for performing Oracle backup and recovery. Explain Recovery Manager (RMAN) method.</li>
-                        <li>What is Data Pump Import? Explain Data Pump import Modes.</li>
-                        <li>What would be the main responsibiliites of oracle DBA in organization?</li>
-                        <li>Explain some difference between Oracle DBA role and Oracle Developer role.</li>
-                        <li>Write Short notes on <br>
-                            a. PGA <br>
-                            b. Oracle Managed Files (OMF) <br>
-                        </li>
+                        <li>explain the architecture of web with pictorial representation.</li>
+                        <li>Write short notes of filter input, XSS, cookie.</li>
+                        <li>explain switch statement in PHP with example.</li>
+                        <li>Explain file inclusion methods with their difference.</li>
+                        <li>Write short notes on web CMS and write down the features of wordpress.</li>
+                        <li>What is class, objects constructor and destructor in PHP, explain with code example.</li>
+                        <li>what are the different types of loop used in PHP?</li>
+                        <li>Write short notes on function, function arguments/ parameters with example.</li>
 
                         <h5 class="text-center">Group C</h5>
                         <b>
-                            <p class="text-center">Attempt any two questions. (very long questions) (2x16=32)</p>
+                            <p class="text-center">Attempt any two questions. (2x16=32)</p>
                         </b>
-                        <li>Explain in detail different types of Errors and Failures occures in oracle database Recovery.</li>
-                        <li>What is Oracle Database Memory Management? Describe three type of memory management scheme used in oracle database
-                            memory management?
-                        </li>
-                        <li>Explain Oracle Process Architecture with block diagram?</li>
+                        <li>Write difference between GET and POST method, write a program in PHP to collect data from a
+                            form with the fields Full Name, Roll No, Address, Batch and print the data.</li>
+                        <li>explain different types of array in PHP with xamples and write short note on session and
+                            interface in PHP.</li>
+                        <li>Explain different types of join with examples and pictorial representation.</li>
                     </ol>
                 </div>
             </div>
-            <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
-                <h4>Seventh Semester</h4>
+            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow" id="paper-fourth-sem">
+                <h4>Sixth Semester</h4>
                 <ol>
-                    <li><a href="../ecom/2075.html">E-commerce</a></li>
-                    <li><a href="../adJava/2075.html">Advanced Java Programming</a></li>
-                    <li><a href="../ooad/2075.html">Object Oriented Analysis and Design</a></li>
-                    <li><a href="#">Minor Project II</a></li>
-                    <li><a href="#">Database Administration (Elective I)</a></li>
-                    <li><a href="../dmw/2075.html">Data Mining and Warehousing (Elective II)</a></li>
+                    <li><a href="../crypto/2074.htm">Introduction to Cryptography</a></li>
+                    <li><a href="../java/2074.html">Java Progamming I</a></li>
+                    <li><a href="../research/2074.html">Research Methodology for CS</a></li>
+                    <li><a href="../se/2074.html">Software Engineering</a></li>
+                    <li><a href="#" href="">Web Tech II</a></li>
+                    <li><a href="#" href="">Minor Project I</a></li>
                 </ol>
             </div>
         </div>
@@ -139,49 +136,50 @@
 
 
 
-  <!-- Footer Section -->
-  <div class="container-fluid">
-    <div class="row justify-content-center rounded" id="footer-section">
-        <div class="col-md-6 text-center">Get connected with us on social networks:</div>
-        <div class="col-md-5 text-center">
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""> <i class="bi bi-instagram"></i></i></a>
-            <a href=""><i class="bi bi-github"></i></i></a>
-            <a href=""> <i class="bi bi-twitter"></i></i></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
-            <a href=""> <i class="bi bi-instagram"></i></i></a>
+    <!-- Footer Section -->
+    <div class="container-fluid">
+        <div class="row justify-content-center rounded" id="footer-section">
+            <div class="col-md-6 text-center">Get connected with us on social networks:</div>
+            <div class="col-md-5 text-center">
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""> <i class="bi bi-instagram"></i></i></a>
+                <a href=""><i class="bi bi-github"></i></i></a>
+                <a href=""> <i class="bi bi-twitter"></i></i></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a href=""> <i class="bi bi-instagram"></i></i></a>
+            </div>
+        </div>
+
+        <div class="row justify-content-center" id="footer-section-2">
+            <div class="col-lg-3 mb-3">
+                <h4>FWUNOTES</h4>
+                <hr class="mb-4">
+                Here we provide the old question paper of different faculties of Far Western University.
+                Along this we also provide the notes of different subject.
+            </div>
+            <div class="col-lg-2 mb-3" id="footer-useful-link">
+                <h4>USEFUL LINKS</h4>
+                <hr class="lg-4">
+                <a href="csit.html">CSIT</a> <br>
+                <a href="#">General Bsc</a> <br>
+                <a href="#">Engineering</a> <br>
+                <a href="bba.html">BBA</a> <br>
+                <a href="#">BBS</a> <br>
+            </div>
+            <div class="col-lg-3 mb-3" id="footer-contact">
+                <h4>CONTACT</h4>
+                <hr class="mb-4">
+                <div><i class="bi bi-house-door p-2"></i>Mahendranagar, New Katan </div>
+                <div><i class="bi bi-envelope-at-fill p-2"></i>birendrabohara2074@gmail.com</div>
+                <div><i class="bi bi-telephone-forward p-2"></i>+9779867315959</div>
+            </div>
+        </div>
+
+        <div class="row text-center" id="footer-copyright-section">
+            <div class="col-12 text-white">© 2022 Copyright: fwunotes.xyz</div>
         </div>
     </div>
 
-    <div class="row justify-content-center" id="footer-section-2">
-        <div class="col-lg-3 mb-3">
-            <h4>FWUNOTES</h4>
-            <hr class="mb-4">
-            Here we provide the old question paper of different faculties of Far Western University.
-            Along this we also provide the notes of different subject.
-        </div>
-        <div class="col-lg-2 mb-3" id="footer-useful-link">
-            <h4>USEFUL LINKS</h4>
-            <hr class="lg-4">
-            <a href="csit.html">CSIT</a> <br>
-            <a href="#">General Bsc</a> <br>
-            <a href="#">Engineering</a> <br>
-            <a href="bba.html">BBA</a> <br>
-            <a href="#">BBS</a> <br>
-        </div>
-        <div class="col-lg-3 mb-3" id="footer-contact">
-            <h4>CONTACT</h4>
-            <hr class="mb-4">
-            <div><i class="bi bi-house-door p-2"></i>Mahendranagar, New Katan </div>
-            <div><i class="bi bi-envelope-at-fill p-2"></i>birendrabohara2074@gmail.com</div>
-            <div><i class="bi bi-telephone-forward p-2"></i>+9779867315959</div>
-        </div>
-    </div>
-
-    <div class="row text-center" id="footer-copyright-section">
-        <div class="col-12 text-white">© 2022 Copyright: fwunotes.xyz</div>
-    </div>
-</div>
     <!-- BootStrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
