changing the style and adding logo

--- a/bba.html
+++ b/bba.html
@@ -196,11 +196,11 @@
         <div class="col-md-2 mb-3" id="footer-useful-link">
             <h4>USEFUL LINKS</h4>
             <hr class="mb-4">
-            <a href="#our-team-title">CSIT</a> <br>
-            <a href="">General Bsc</a> <br>
-            <a href="">Engineering</a> <br>
+            <a href="csit.html">CSIT</a> <br>
+            <a href="#">General Bsc</a> <br>
+            <a href="#">Engineering</a> <br>
             <a href="bba.html">BBA</a> <br>
-            <a href="">BBS</a> <br>
+            <a href="#">BBS</a> <br>
         </div>
         <div class="col-md-3 mb-3" id="footer-contact">
             <h4>CONTACT</h4>
