--- a/csit/4sem/database/2076.html
+++ b/csit/4sem/database/2076.html
@@ -23,7 +23,7 @@
     <!-- Navbar -->
     <nav class="navbar  navbar-expand-lg bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="../../../index.html">FWUNOTES</a>
+            <a class="navbar-brand text-white" href="../../../index.html"><img src="../../../images/logo.png" width="70px" alt="" class="img-fluid rounded"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -116,7 +116,7 @@
                                 <li>Triggers</li>
                             </ol>
                         </li>
-                        <h5 class="text-center">Group B</h5>
+                        <h5 class="text-center">Group C</h5>
                         <b>
                             <p class="text-center">Attempt any two questions. (Short questions) (2x16=32)</p>
                         </b>
@@ -133,15 +133,15 @@
                     </ol>
                 </div>
             </div>
-            <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
+            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow" id="paper-fourth-sem">
                 <h4>Fourth Semester</h4>
                 <ol>
                     <li><a href="../sad/2079.html">System Analysis and Design</a></li>
-                    <li><a href="">Numerical Methods</a></li>
+                    <li><a href="../nm/2079.html">Numerical Methods</a></li>
                     <li><a href="#">Database Management System</a></li>
                     <li><a href="../satII/2079.html">Applied Statistics</a></li>
                     <li><a href="../dcn/2079.html">Data Communication and Networks</a></li>
-                    <li><a href="">Theory Of Computation</a></li>
+                    <li><a href="../toc/2079.html">Theory Of Computation</a></li>
                 </ol>
             </div>
         </div>
