--- a/csit/6sem/se/2076.html
+++ b/csit/6sem/se/2076.html
@@ -23,7 +23,7 @@
     <!-- Navbar -->
     <nav class="navbar  navbar-expand-lg bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="../../../index.html">FWUNOTES</a>
+            <a class="navbar-brand text-white" href="../../../index.html"><img src="../../../images/logo.png" width="70px" alt="" class="img-fluid rounded"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -123,7 +123,7 @@
                     </ol>
                 </div>
             </div>
-            <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
+            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow" id="paper-fourth-sem">
                 <h4>Sixth Semester</h4>
                 <ol>
                     <li><a href="../crypto/2074.htm">Introduction to Cryptography</a></li>
@@ -163,10 +163,10 @@
         <div class="col-lg-2 mb-3" id="footer-useful-link">
             <h4>USEFUL LINKS</h4>
             <hr class="lg-4">
-            <a href="csit.html">CSIT</a> <br>
+            <a href="../../../csit.html">CSIT</a> <br>
             <a href="#">General Bsc</a> <br>
             <a href="#">Engineering</a> <br>
-            <a href="bba.html">BBA</a> <br>
+            <a href="../../../bba.html">BBA</a> <br>
             <a href="#">BBS</a> <br>
         </div>
         <div class="col-lg-3 mb-3" id="footer-contact">
