changing the files

--- a/index.html
+++ b/index.html
@@ -345,12 +345,11 @@
     <div class="row justify-content-center rounded" id="footer-section">
       <div class="col-md-6 text-center">Get connected with us on social networks:</div>
       <div class="col-md-5 text-center">
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""> <i class="bi bi-instagram"></i></i></a>
-        <a href=""><i class="bi bi-github"></i></i></a>
-        <a href=""> <i class="bi bi-twitter"></i></i></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
-        <a href=""> <i class="bi bi-instagram"></i></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100090640976667"><i class="bi bi-facebook"></i></a>
+        <a href="#"> <i class="bi bi-instagram"></i></i></a>
+        <a href="https://github.com/birendrabohara1230"><i class="bi bi-github"></i></i></a>
+        <a href="https://twitter.com/Birendr26174484"> <i class="bi bi-twitter"></i></i></i></a>
+        <a href="https://www.linkedin.com/in/birendra-bohara-0a640117b/"><i class="bi bi-linkedin"></i></a>
       </div>
     </div>
 
