adjusting the link

--- a/csit/8sem/adbd/2074.html
+++ b/csit/8sem/adbd/2074.html
@@ -127,7 +127,7 @@
                     <li><a href="../pc/2074.html">Parallel Computing</a></li>
                     <li><a href="#">Internship</a></li>
                     <li><a href="../adbd/2074.html">Advanced Database Design (Elective III)</a></li>
-                    <li><a href="..//ddbms/2074.html">Distributed Database Management System (Elective IV)</a></li>
+                    <li><a href="../ddbms/2074.html">Distributed Database Management System (Elective IV)</a></li>
                     <li><a href="../ebeg/2074.html">E-Business and E-Governance (Elective V)</a></li>
                 </ol>
             </div>
