--- a/csit/8sem/ddbms/2074.html
+++ b/csit/8sem/ddbms/2074.html
@@ -70,8 +70,7 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="#"><button type="button" class="btn   paper-year-style ">2074</button></a>
-
+                    <a href="#"><button type="button" class="btn paper-year-style ">2074</button></a>
                 </div>
             </div>
 
@@ -124,7 +123,7 @@
                     <li><a href="../pc/2074.html">Parallel Computing</a></li>
                     <li><a href="#">Internship</a></li>
                     <li><a href="../adbd/2074.html">Advanced Database Design (Elective III)</a></li>
-                    <li><a href="..//ddbms/2074.html">Distributed Database Management System (Elective IV)</a></li>
+                    <li><a href="../ddbms/2074.html">Distributed Database Management System (Elective IV)</a></li>
                     <li><a href="../ebeg/2074.html">E-Business and E-Governance (Elective V)</a></li>
                 </ol>
             </div>
