--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Contact Us</a>
+            <a class="nav-link text-white" href="#footer-section">Contact Us</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
@@ -191,7 +191,7 @@
           <li><a href="csit/6sem/java/2074.html">Java Progamming I</a></li>
           <li><a href="csit/6sem/research/2074.html">Research Methodology for CS</a></li>
           <li><a href="csit/6sem/se/2074.html">Software Engineering</a></li>
-          <li><a href="#" href="">Web Tech II</a></li>
+          <li><a href="csit/6sem/webII/2074.html" href="">Web Tech II</a></li>
           <li><a href="#" href="">Minor Project I</a></li>
         </ol>
       </div>
