adding link to website

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
           <li><a href="csit/6sem/java/2074.html">Java Progamming I</a></li>
           <li><a href="csit/6sem/research/2074.html">Research Methodology for CS</a></li>
           <li><a href="csit/6sem/se/2074.html">Software Engineering</a></li>
-          <li><a href="csit/6sem/webII/2074.html" href="">Web Tech II</a></li>
-          <li><a href="#" href="">Minor Project I</a></li>
+          <li><a href="csit/6sem/webII/2074.html">Web Tech II</a></li>
+          <li><a href="https://fwunotes.xyz/index.html">Minor Project I</a></li>
         </ol>
       </div>
     </div>
