--- a/csit.html
+++ b/csit.html
@@ -139,7 +139,7 @@
                     <li><a href="csit/6sem/research/2074.html">Research Methodology for CS</a></li>
                     <li><a href="csit/6sem/se/2074.html">Software Engineering</a></li>
                     <li><a href="csit/6sem/webII/2074.html" href="">Web Tech II</a></li>
-                    <li><a href="#" href="">Minor Project I</a></li>
+                    <li><a href="https://fwunotes.xyz/index.html">Minor Project I</a></li>
                 </ol>
             </div>
         </div>
