second sem one paper clear

--- a/csit/2sem/DL/2071.html
+++ b/csit/2sem/DL/2071.html
@@ -119,10 +119,10 @@
             <div class="col-lg-3 col-11 shadow mb-4 costume-shadow" id="paper-fourth-sem">
                 <h4>Second Semester</h4>
                 <ol>
-                  <li><a href="#">Linear Algebra</a></li>
-                  <li><a href="#">Mechanics And Electrodynamics</a></li>
+                  <li><a href="../la/2071.html">Linear Algebra</a></li>
+                  <li><a href="../mc/2071.html">Mechanics And Electrodynamics</a></li>
                   <li><a href="#">Digital Logic Design</a></li>
-                  <li><a href="#">Microprocessor System</a></li>
+                  <li><a href="../mp/2072.html">Microprocessor System</a></li>
                   <li><a href="../DSA/2072.html">Data Structure And Algorithms</a></li>
                 </ol>
             </div>
@@ -155,10 +155,10 @@
         <div class="col-lg-2 mb-3" id="footer-useful-link">
             <h4>USEFUL LINKS</h4>
             <hr class="lg-4">
-            <a href="csit.html">CSIT</a> <br>
+            <a href="../../../csit.html">CSIT</a> <br>
             <a href="#">General Bsc</a> <br>
             <a href="#">Engineering</a> <br>
-            <a href="bba.html">BBA</a> <br>
+            <a href="../../../bba.html">BBA</a> <br>
             <a href="#">BBS</a> <br>
         </div>
         <div class="col-lg-3 mb-3" id="footer-contact">
