--- a/csit/2sem/la/2071.html
+++ b/csit/2sem/la/2071.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Data Structure and Algorithms (Com.Sc.DSA.121)</title>
+    <title>Linear Algebra (Com.Sc. MTH.121)</title>
 
     <!-- BootStrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -70,14 +70,14 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="#"><button type="button" class="btn  paper-year-style">2072</button></a>
+                    <a href="#"><button type="button" class="btn  paper-year-style">2071</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
                 <p>End-Term Examination-2072</p>
-                <p>Data Structure and Algorithms (Com.Sc.DSA.121)</p>
+                <p>Linear Algebra (Com.Sc. MTH.121)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
@@ -97,35 +97,42 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Define "Abstract Data Type (ADT)". Explain the phrase "Queue as an ADT". What is the difference between ADT and data structure?</li>
-                        <li>Analyze the time complexity of the algorithes represented by following pseudo-code in terms of big-0 notation. <br>
-                            <img src="../../../images/2072dsa2.png" alt="" class="img-fluid">
+                        <li>Discuss the system of linear equations. Prove that the system of linear equation x + y = 5, x - y = 1, is consistent.</li>
+                        <li>Find the inverse of matrix <img src="../../../images/la2.png" alt="" class="img-fluid"></li>
+                        <li>Find the eigen value of matrix <img src="../../../images/la3.png" alt="" class="img-fluid"></li>
+                        <li>For any two vector P, Q in <img src="../../../images/la4.png" alt="" class="img-fluid">, then <br>
+                            a) P + Q = Q + P <br>
+                            b) P.Q = Q.P <br>
                         </li>
-                        <li>Define heap. Construct a max-heap from following data (show each step). 11, 12, 13, 10, 17, 5, 9, 23, 15, 25</li>
-                        <li>Write selection sort algorithm and analyze its time complexity.</li>
-                        <li>Convert following infix expression to postfix expression using stack (show each step): (a+(b*c)/e)-f</li>
-                        <li>Define a linked list. Explain the different types of linked lists.</li>
-                        <li>Write linear search algorithm and analyze its complexity.</li>
-                        <li>Give a brief account on Stack data structure and its applicationss. </li>
+                        <li>Prove that, If P and Q be two vectors in <img src="../../../images/la4.png" alt="" class="img-fluid">, then
+                            <br> <img src="../../../images/la5.png" alt="" class="img-fluid">
+                        </li>
+                        <li>Prove that the product of a scalar and a linear transformation is also a linear transformation.</li>
+                        <li>Find the orthogonal basis for  <img src="../../../images/la7.png" alt="" class="img-fluid"></li>
+                        <li>What are the eigen values and eigen vectors of a matrix? Define characteristic equation with example.</li>
                         <h5 class="text-center">Group C</h5>
                         <b>
                             <p class="text-center">Attempt any two questions. (long questions) (2x16=32)</p>
                         </b>
-                        <li>What do you mean by a AVL tree? How would you insert following numbers into an initially empty AVL one by one (show each step). 10, 20, 30, 25, 27, 7, 8, 23</li>
-                        <li>Define spanning tree of a graph. Illustrate with example, the Kruskal's method and Prim's method for finding
-                            minimum spanning tree.</li>
-                        <li>What do you mean by tree traversal? Discuss binary tree traversal techniques.</li>
+                        <li>State and prove Cayley Hamilton Theorem and verify it for a square matrix of order 2 and 3.</li>
+                        <li>If P and Q be two vectors in <img src="../../../images/la10a.png" alt="" class="img-fluid">, then prove that 
+                            <img src="../../../images/la10b.png" alt="" class="img-fluid">
+                        </li>
+                        <li>Prove that, <br>
+                            a) The composition of two linear transformation is also a linear transformation. <br>
+                            b) The inverse of a linear transformation is linear transformation. <br>
+                        </li>
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
                 <h4>Second Semester</h4>
                 <ol>
-                  <li><a href="../la/2071.html">Linear Algebra</a></li>
+                  <li><a href="#">Linear Algebra</a></li>
                   <li><a href="../mc/2071.html">Mechanics And Electrodynamics</a></li>
                   <li><a href="../DL/2071.html">Digital Logic Design</a></li>
                   <li><a href="../mp/2072.html">Microprocessor System</a></li>
-                  <li><a href="#">Data Structure And Algorithms</a></li>
+                  <li><a href="../DSA/2072.html">Data Structure And Algorithms</a></li>
                 </ol>
             </div>
         </div>
