--- a/csit/2sem/mc/2071.html
+++ b/csit/2sem/mc/2071.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Data Structure and Algorithms (Com.Sc.DSA.121)</title>
+    <title>Mechanics And Electrodynamics (Com. Sc. PHY 121)</title>
 
     <!-- BootStrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -70,14 +70,14 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="#"><button type="button" class="btn  paper-year-style">2072</button></a>
+                    <a href="2071.html"><button type="button" class="btn paper-year-style">2071</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
                 <p>End-Term Examination-2072</p>
-                <p>Data Structure and Algorithms (Com.Sc.DSA.121)</p>
+                <p>Mechanics And Electrodynamics (Com. Sc. PHY 121)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
@@ -97,35 +97,33 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Define "Abstract Data Type (ADT)". Explain the phrase "Queue as an ADT". What is the difference between ADT and data structure?</li>
-                        <li>Analyze the time complexity of the algorithes represented by following pseudo-code in terms of big-0 notation. <br>
-                            <img src="../../../images/2072dsa2.png" alt="" class="img-fluid">
-                        </li>
-                        <li>Define heap. Construct a max-heap from following data (show each step). 11, 12, 13, 10, 17, 5, 9, 23, 15, 25</li>
-                        <li>Write selection sort algorithm and analyze its time complexity.</li>
-                        <li>Convert following infix expression to postfix expression using stack (show each step): (a+(b*c)/e)-f</li>
-                        <li>Define a linked list. Explain the different types of linked lists.</li>
-                        <li>Write linear search algorithm and analyze its complexity.</li>
-                        <li>Give a brief account on Stack data structure and its applicationss. </li>
+                        <li>Find x-component of electric field at point (1,2) corresponding to potential
+                            <img src="../../../images/me9.png" class="img-fluid"  alt=""></li>
+                        <li>What do you mean by electric displacement current? Why did Maxwell; introduce it?</li>
+                        <li>Define electrical image. Find out electric field intensity at a point due to point charge in case of grounded conducting sphere.</li>
+                        <li>Define vector potential and magnetic vector potential. Deduce an expression for magnetic vector potential.</li>
+                        <li>Prove <img src="../../../images/me13.png" class="img-fluid" alt="">, where symbols have their usual meaning.</li>
+                        <li>Show that Newton's 2nd law of motion is real law motion. Write limitations of Newton's laws of motion.</li>
+                        <li>State and prove the principle of conservation of angular momentum.</li>
+                        <li>Show that the motion of a charged particle with transverse electric field is parabolic in nature. Also find the total shift of particle after emerging from the field.</li>
                         <h5 class="text-center">Group C</h5>
                         <b>
                             <p class="text-center">Attempt any two questions. (long questions) (2x16=32)</p>
                         </b>
-                        <li>What do you mean by a AVL tree? How would you insert following numbers into an initially empty AVL one by one (show each step). 10, 20, 30, 25, 27, 7, 8, 23</li>
-                        <li>Define spanning tree of a graph. Illustrate with example, the Kruskal's method and Prim's method for finding
-                            minimum spanning tree.</li>
-                        <li>What do you mean by tree traversal? Discuss binary tree traversal techniques.</li>
+                        <li>What do you mean by harmonic oscillator? Obtain relation between its acceleration and displacement. Show that the energy of harmonic oscillator is directly proportional to square of its amplitude.</li>
+                        <li>Draw the energy level diagram of a diatomic molecule and explain its salient points. What is meant by the terms vibrational quantum number and zero point energy?</li>
+                        <li>Derive formula for molecular find inside dielectric. Obtain boundary conditions for field vectors <img src="../../../images/me24.png" class="img-fluid" alt=""> near surface separating two media.</li>
                     </ol>
                 </div>
             </div>
-            <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
+            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow" id="paper-fourth-sem">
                 <h4>Second Semester</h4>
                 <ol>
-                  <li><a href="../la/2071.html">Linear Algebra</a></li>
-                  <li><a href="../mc/2071.html">Mechanics And Electrodynamics</a></li>
-                  <li><a href="../DL/2071.html">Digital Logic Design</a></li>
-                  <li><a href="../mp/2072.html">Microprocessor System</a></li>
-                  <li><a href="#">Data Structure And Algorithms</a></li>
+                    <li><a href="../la/2071.html">Linear Algebra</a></li>
+                    <li><a href="#">Mechanics And Electrodynamics</a></li>
+                    <li><a href="../DL/2071.html">Digital Logic Design</a></li>
+                    <li><a href="../mp/2072.html">Microprocessor System</a></li>
+                    <li><a href="../DSA/2072.html">Data Structure And Algorithms</a></li>
                 </ol>
             </div>
         </div>
@@ -133,8 +131,8 @@
 
 
 
-   <!-- Footer Section -->
-   <div class="container-fluid">
+ <!-- Footer Section -->
+ <div class="container-fluid">
     <div class="row justify-content-center rounded" id="footer-section">
         <div class="col-md-6 text-center">Get connected with us on social networks:</div>
         <div class="col-md-5 text-center">
