--- a/csit/2sem/mp/2072.html
+++ b/csit/2sem/mp/2072.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Data Structure and Algorithms (Com.Sc.DSA.121)</title>
+    <title>Microprocessor System (Com.Sc. MPS.121)</title>
 
     <!-- BootStrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -77,7 +77,7 @@
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
                 <p>End-Term Examination-2072</p>
-                <p>Data Structure and Algorithms (Com.Sc.DSA.121)</p>
+                <p>Microprocessor System (Com.Sc. MPS.121)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
@@ -97,24 +97,29 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Define "Abstract Data Type (ADT)". Explain the phrase "Queue as an ADT". What is the difference between ADT and data structure?</li>
-                        <li>Analyze the time complexity of the algorithes represented by following pseudo-code in terms of big-0 notation. <br>
-                            <img src="../../../images/2072dsa2.png" alt="" class="img-fluid">
-                        </li>
-                        <li>Define heap. Construct a max-heap from following data (show each step). 11, 12, 13, 10, 17, 5, 9, 23, 15, 25</li>
-                        <li>Write selection sort algorithm and analyze its time complexity.</li>
-                        <li>Convert following infix expression to postfix expression using stack (show each step): (a+(b*c)/e)-f</li>
-                        <li>Define a linked list. Explain the different types of linked lists.</li>
-                        <li>Write linear search algorithm and analyze its complexity.</li>
-                        <li>Give a brief account on Stack data structure and its applicationss. </li>
+                        <li>WAP in 8085 microprocessor to separate odd & even numbers from an array of 10 numbers stored in memory locations starting from 2050H. Store the odd numbers starting from 2060H & even number starting from 2070H onwards.</li>
+                        <li>Three 8 bit numbers P, Q and R are stored in the registers B, C and D respectively. WAP in 8085 microprocessor to find the largest number among them and store it in the H register.</li>
+                        <li>A set of numbers is stored in memory locations starting from xx25H. The last number is 45H. WAP in 8085 to find if a hex number AB exist in them. Also count total appearance of it if it exist.</li>
+                        <li>Draw the block SAP-1 architecture and explain each block.</li>
+                        <li>Draw the timing diagram of MVI A, 98H. Also explain it.</li>
+                        <li>What do you mean by hyper threading? Differentiate between RISC and CISC architecture.</li>
+                        <li>What is the signigicance of flag register in any microprocessor? Explain the flags of 8085 microprocessor.</li>
+                        <li>What do you mean by interrupts? Explain maskable and non-maskable interrupt with example.</li>
                         <h5 class="text-center">Group C</h5>
                         <b>
                             <p class="text-center">Attempt any two questions. (long questions) (2x16=32)</p>
                         </b>
-                        <li>What do you mean by a AVL tree? How would you insert following numbers into an initially empty AVL one by one (show each step). 10, 20, 30, 25, 27, 7, 8, 23</li>
-                        <li>Define spanning tree of a graph. Illustrate with example, the Kruskal's method and Prim's method for finding
-                            minimum spanning tree.</li>
-                        <li>What do you mean by tree traversal? Discuss binary tree traversal techniques.</li>
+                        <li>a. Draw the architecture of basic microprocessor and explain each components of it in details. (10) <br>
+                            b. Explain DMA with its advantages and applications. (6) 
+                        </li>
+                        <li>a. WAP to print the string "Microprocessor is good for programming" in 8086 microprocessor. (10) <br>
+                            b. What do you understand by addressing modes? Explain implied addressing mode with example. (6)
+                        </li>
+                        <li>a. Draw the block diagram of RS-232C and explain with the example of null modem connection. (10)
+                            <br>
+                            b. WAP in 8085 microprocessor that loads any sixteen data into memory location starting from XX70H. Transfer  the entire block of data starting from XX40H in reverse order. (6)
+                        </li>
+
                     </ol>
                 </div>
             </div>
@@ -124,8 +129,8 @@
                   <li><a href="../la/2071.html">Linear Algebra</a></li>
                   <li><a href="../mc/2071.html">Mechanics And Electrodynamics</a></li>
                   <li><a href="../DL/2071.html">Digital Logic Design</a></li>
-                  <li><a href="../mp/2072.html">Microprocessor System</a></li>
-                  <li><a href="#">Data Structure And Algorithms</a></li>
+                  <li><a href="#">Microprocessor System</a></li>
+                  <li><a href="../DSA/2072.html">Data Structure And Algorithms</a></li>
                 </ol>
             </div>
         </div>
