--- a/csit.html
+++ b/csit.html
@@ -88,10 +88,10 @@
             <div class="col-lg-3 shadow-lg  rounded mt-3 zoominout">
                 <h4>Second Semester</h4>
                 <ol>
-                    <li><a href="#">Linear Algebra</a></li>
-                    <li><a href="#">Mechanics And Electrodynamics</a></li>
+                    <li><a href="csit/2sem/la/2071.html">Linear Algebra</a></li>
+                    <li><a href="csit/2sem/mc/2071.html">Mechanics And Electrodynamics</a></li>
                     <li><a href="csit/2sem/DL/2071.html">Digital Logic Design</a></li>
-                    <li><a href="#">Microprocessor System</a></li>
+                    <li><a href="csit/2sem/mp/2072.html">Microprocessor System</a></li>
                     <li><a href="csit/2sem/DSA/2072.html">Data Structure And Algorithms</a></li>
                 </ol>
             </div>
