--- a/csit/2sem/mp/2072.html
+++ b/csit/2sem/mp/2072.html
@@ -123,7 +123,7 @@
                     </ol>
                 </div>
             </div>
-            <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
+            <div class="col-lg-3 col-11 shadow mb-4 costume-shadow" id="paper-fourth-sem">
                 <h4>Second Semester</h4>
                 <ol>
                   <li><a href="../la/2071.html">Linear Algebra</a></li>
