--- a/csit/6sem/crypto/2074.html
+++ b/csit/6sem/crypto/2074.html
@@ -135,7 +135,7 @@
                     <li><a href="../research/2074.html">Research Methodology for CS</a></li>
                     <li><a href="../se/2074.html">Software Engineering</a></li>
                     <li><a href="../webII/2074.html">Web Tech II</a></li>
-                    <li><a href="">Minor Project I</a></li>
+                    <li><a href="#">Minor Project I</a></li>
                 </ol>
             </div>
         </div>
