--- a/csit/6sem/crypto/2075.html
+++ b/csit/6sem/crypto/2075.html
@@ -70,7 +70,7 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="2074.htm"><button type="button" class="btn ">2074</button></a>
+                    <a href="2074.html"><button type="button" class="btn ">2074</button></a>
                     <a href="#"><button type="button" class="btn paper-year-style">2075</button></a>
                     <a href="2076.html"><button type="button" class="btn">2076</button></a>
                     <a href="2079.html"><button type="button" class="btn ">2079</button></a>
